--- a/Coding/firstpage_member.html
+++ b/Coding/firstpage_member.html
@@ -56,7 +56,7 @@
         <li class="nav-item dropdown signin" id="navbar">
                 <img src="img/funnyPic.jfif" class="avatar img-circle" alt="avatar">
             <div class = "member">
-                <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown"> Sakdipat Ontoum</a>
+                <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown"> Sakdipat@gmail.com</a>
                 
                 <div class="dropdown-menu">
                   <!-- <a class="dropdown-item" href="#">Edit Profile</a> -->
